--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "daisyui": "^5.0.35",
+    "firebase": "^11.7.3",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
-    "sweetalert2": "^11.21.0",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
